--- a/index.html
+++ b/index.html
@@ -6,6 +6,135 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hist-Fact: The Great Wall of China</title>
     <link rel="stylesheet" href="assets/css/styles.css">
+
+<style>
+/* (the vertical ruler) */
+.timeline5 {
+  max-width: 1200px;
+  margin: 0 auto;
+  position: relative;
+}
+
+/* (the vertical ruler) */
+.timeline5::after {
+  top: 0;
+  bottom: 0;
+  left: 50%;
+  margin-left: -3px;
+  content: '';
+  position: absolute;
+  width: 6px;
+  background-color: white;
+}
+
+/* Container around content */
+.container5 {
+  padding: 10px 40px;
+  background-color: inherit;
+  width: 50%;
+  position: relative;
+}
+
+/* circles */
+.container5::after {
+  content: '';
+  position: absolute;
+  width: 25px;
+  height: 25px;
+  border: 4px solid teal;
+  top: 15px;
+  border-radius: 50%;
+  z-index: 1;
+  right: -17px;
+  background-color: white;
+}
+
+/* container to the left */
+.left5 {
+  left: 0;
+}
+
+/* container to the right */
+.right5 {
+  left: 50%;
+}
+
+/* arrows to the left container (pointing right) */
+.left5::before {
+  content: " ";
+  height: 0;
+  position: absolute;
+  right: 30px;
+  border: medium solid white;
+  border-width: 10px 0 10px 10px;
+  border-color: transparent transparent transparent white;
+  top: 22px;
+  width: 0;
+  z-index: 1;
+}
+
+/* arrows to the right container (pointing left) */
+.right5::before {
+  content: " ";
+  height: 0;
+  position: absolute;
+  left: 30px;
+  border: medium solid white;
+  border-width: 10px 10px 10px 0;
+  border-color: transparent white transparent transparent;
+  top: 22px;
+  width: 0;
+  z-index: 1;
+}
+
+/* circle for containers on the right side */
+.right5::after {
+  left: -16px;
+}
+
+/* content */
+.content5 {
+  padding: 20px 30px;
+  border-radius: 6px;
+  color:black;
+  background-color: white;
+  position: relative;
+}
+
+/* Media queries */
+@media screen and (max-width: 600px) {
+  /* Place the timelime to the left */
+  .timeline5::after {
+  left: 31px;
+  }
+  
+  /* containers */
+  .container5 {
+  width: 100%;
+  padding-left: 70px;
+  padding-right: 25px;
+  }
+  
+  /* arrows are pointing leftwards */
+  .container5::before {
+  left: 60px;
+  border-width: 10px 10px 10px 0;
+  border-color: transparent white transparent transparent;
+  border: medium solid white;
+  }
+
+  /* circles are at the same spot */
+  .left5::after, .right::after {
+  left: 15px;
+  }
+  
+  /* right containers behave like the left ones */
+  .right5 {
+  left: 0%;
+  }
+}
+</style>
+
 </head>
 
 <body>
@@ -55,6 +184,7 @@
     </nav>
 
     <main>
+        <br><br>
         <section id="introduction">
             <h2></h2>
             <br><br>
@@ -84,8 +214,56 @@
 
         </section>
 
+        <br><br><br><br><hr><br><br><br><br>
         <section id="timeline">
-            <h2></h2>
+            <h2 style="text-align:center;">Timeline of Events</h2>
+        <br><br>
+
+<div class="timeline5">
+  <div class="container5 left5">
+    <div class="content5">
+      <h2>Early Construction (7th century BC)</h2>
+      <p>- The earliest walls were built during this period to protect China's northern borders from invasions by nomadic tribes.</p>
+      <p>- Construction of rudimentary walls and fortifications by regional states such as Chu, Yan, and Zhao.</p>
+    </div>
+  </div>
+  <div class="container5 right5">
+    <div class="content5">
+      <h2>Qin Dynasty (221-206 BC)</h2>
+      <p>- Emperor Qin Shi Huang aimed to unify China and ordered the connection of existing walls into a cohesive defensive system.</p>
+      <p>- Construction of initial walls and watchtowers, laying the foundation for the future development of the Great Wall.</p>
+    </div>
+  </div>
+  <div class="container5 left5">
+    <div class="content5">
+      <h2>Han Dynasty (206 BC - 220 AD)</h2>
+      <p>- The Han Dynasty focused on fortifying and expanding the Great Wall to protect the Silk Road trade routes and defend against Xiongnu raids.</p>
+      <p>- Major renovations, extension of the walls towards the west, and strengthening of defensive capabilities.</p>
+    </div>
+  </div>
+  <div class="container5 right5">
+    <div class="content5">
+      <h2>Ming Dynasty (1368-1644 AD)</h2>
+      <p>- The most well-known and significant phase of Great Wall construction, characterized by extensive rebuilding, fortification, and expansion.</p>
+      <p>- Ming emperors, such as Emperor Yongle and Emperor Wanli, oversaw the construction of iconic sections like Badaling and Juyongguan.</p>
+    </div>
+  </div>
+  <div class="container5 left5">
+    <div class="content5">
+      <h2>Jin Dynasty (1115-1234 AD)</h2>
+      <p>- The Jin Dynasty, a non-Han Chinese dynasty ruling in the north, contributed to the Great Wall's expansion and defense against Mongol invasions.</p>
+      <p>- Reinforcement and extension of the wall to counter the Mongol threat.</p>
+    </div>
+  </div>
+  <div class="container5 right5">
+    <div class="content5">
+      <h2>Ming-Qing Transition (17th century AD)</h2>
+      <p>- During the Ming-Qing transition, the Great Wall played a role in the defense against the Manchu-led Qing Dynasty.</p>
+      <p>- The wall's fortifications were adapted and reinforced to withstand new military strategies and technologies.</p>
+    </div>
+  </div>
+</div>
+
         </section>
 
         <section id="evidence-info">
