--- a/index.html
+++ b/index.html
@@ -143,6 +143,92 @@
                 left: 0%;
             }
         }
+
+
+        .container10 {
+  width: 60%;
+  margin: 2rem auto; 
+}
+
+.gallery {
+  display: grid;
+  grid-template-columns: repeat(8, 1fr);
+  grid-template-rows: repeat(8, 5vw);
+  grid-gap: 1.5rem; 
+}
+
+.gallery__img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  display: block; 
+}
+
+.gallery__item--1 {
+  grid-column-start: 1;
+  grid-column-end: 3;
+  grid-row-start: 1;
+  grid-row-end: 3;
+
+  /** Alternative Syntax **/
+  /* grid-column: 1 / span 2;  */
+  /* grid-row: 1 / span 2; */
+}
+
+.gallery__item--2 {
+  grid-column-start: 3;
+  grid-column-end: 5;
+  grid-row-start: 1;
+  grid-row-end: 3;
+
+  /** Alternative Syntax **/
+  /* grid-column: 3 / span 2;  */
+  /* grid-row: 1 / span 2; */
+}
+
+.gallery__item--3 {
+  grid-column-start: 5;
+  grid-column-end: 9;
+  grid-row-start: 1;
+  grid-row-end: 6;
+
+  /** Alternative Syntax **/
+  /* grid-column: 5 / span 4;
+  grid-row: 1 / span 5; */
+}
+
+.gallery__item--4 {
+  grid-column-start: 1;
+  grid-column-end: 5;
+  grid-row-start: 3;
+  grid-row-end: 6;
+
+  /** Alternative Syntax **/
+  /* grid-column: 1 / span 4;  */
+  /* grid-row: 3 / span 3; */
+}
+
+.gallery__item--5 {
+  grid-column-start: 1;
+  grid-column-end: 5;
+  grid-row-start: 6;
+  grid-row-end: 9;
+
+  /** Alternative Syntax **/
+  /* grid-column: 1 / span 4; */
+  /* grid-row: 6 / span 3; */
+}
+
+.gallery__item--6 {
+  grid-column-start: 5;
+  grid-column-end: 9;
+  grid-row-start: 6;
+  grid-row-end: 9;
+
+  /** Alternative Syntax **/
+  /* grid-column: 5 / span 4; */
+  /* grid-row: 6 / span 3; */
+}
     </style>
 
 </head>
@@ -385,13 +471,51 @@
             </section>
 
 
+            <br><br><br><br>
+            <hr><br><br><br><br>
             <section id="photosvideos">
-                <h2></h2>
+            <h2 style="text-align:center">Media</h2>
+            <br>
+
+            <div class="container10">
+            <div class="gallery">
+            <figure class="gallery__item gallery__item--1">
+            <img src="assets/img/20090529_Great_Wall_8185 (1).jpg" alt="Photo of the great wall of China" class="gallery__img">
+            </figure>
+            <figure class="gallery__item gallery__item--2">
+            <img src="assets/img/great-wall-1525124_1280 (1).jpg" alt="Photo of the great wall of China" class="gallery__img">
+            </figure>
+            <figure class="gallery__item gallery__item--3">
+            <img src="assets/img/Map_of_the_Great_Wall_of_China (1).jpg" alt="Map of the great wall of China" class="gallery__img">
+            </figure>
+            <figure class="gallery__item gallery__item--4">
+            <img src="assets/img/snow-winter-mountain-cold-tourism-china (2).jpg" alt="Great Wall Of China Covered in Snow" class="gallery__img">
+            </figure>
+            <figure class="gallery__item gallery__item--5">
+                <img src="assets/img/a9600de8d0864cb3be1fe7a75e3a53c4.jpg" alt="Great Wall of China's photo" class="gallery__img">
+            </figure>
+            <figure class="gallery__item gallery__item--6">
+                <img src="assets/img/main-qimg-da1261af3c09f541fa383cd20976dba5.webp" alt="Photo of the great wall of China" class="gallery__img">
+            </figure>
+            </div>
+            </div>
+
+            <center><div class="player">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/EotbKqZmBuY" title="YouTube video player"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        allowfullscreen></iframe>
+            </div></center>
+
             </section>
+
+            <br><br><br><br>
+            <hr>
+
         </main>
 
         <footer>
-            <br><br>
+            
             <b>
                 <p class="footerright">&copy; 2023 | Hist-Fact: The Great Wall of China</p>
             </b>
