--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
                 <span class="spacing"></span>
                 <span class="spacing"></span>
                 <span class="spacing"></span>
-                <h4 id="construction" style="text-align:center;">- Construction Techniques -</h4>
+                <h4 id="construction">- Construction Techniques -</h4>
                 <span class="spacing"></span>
                 <div class="player">
                     <iframe src="https://www.youtube.com/embed/Tka_a3jdSHQ" title="YouTube video player"
@@ -229,7 +229,7 @@
                 <span class="spacing"></span>
                 <span class="spacing"></span>
                 <span class="spacing"></span>
-                <h4 id="defense" style="text-align:center;">- Defensive Strategies -</h4>
+                <h4 id="defense">- Defensive Strategies -</h4>
                 <span class="spacing"></span>
                 <div class="player">
                     <iframe src="https://www.youtube.com/embed/RmaVP1n3Ogk" title="YouTube video player"
@@ -250,7 +250,7 @@
                 <span class="spacing"></span>
                 <span class="spacing"></span>
                 <span class="spacing"></span>
-                <h4 id="military" style="text-align:center;">- Impact on Military Defense -</h4>
+                <h4 id="military">- Impact on Military Defense -</h4>
                 <span class="spacing"></span>
                 <div class="player">
                     <iframe src="https://www.youtube.com/embed/i8aZdwNlSEI" title="YouTube video player"
